--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <div class="page">
     <header class="header">
       <img src="./images/Logo.svg" alt="Логотип" class="header__logo">
+      <div class="header__line"></div>
     </header>
     <div class="profile">
       <img src="./images/Jacques-Yves Cousteau.png" alt="Фото профиля" class="profile__img hover">
