Сделал секцию  gallery

--- a/index.html
+++ b/index.html
@@ -31,10 +31,47 @@
       </div>
       <button class="profile__btn profile__btn_add hover"></button>
     </div>
+    <div class="gallery">
+      <div class="gallery__item">
+        <img src="./images/gallery-karachaevsk.png" alt="Карачаевск" class="gallery__item-img hover">
+        <div class="gallery__item-info-container">
+          <h3 class="gallery__item-title">Карачавевск</h3>
+          <button class="galery__item-like-btn hover"></button>
+        </div>
+      </div>
+      <div class="gallery__item">
+        <img src="./images/gallery-karachaevsk.png" alt="Карачаевск" class="gallery__item-img hover">
+        <div class="gallery__item-info-container">
+          <h3 class="gallery__item-title">Карачавевск</h3>
+          <button class="galery__item-like-btn hover"></button>
+        </div>
+      </div>      <div class="gallery__item">
+        <img src="./images/gallery-karachaevsk.png" alt="Карачаевск" class="gallery__item-img hover">
+        <div class="gallery__item-info-container">
+          <h3 class="gallery__item-title">Карачавевск</h3>
+          <button class="galery__item-like-btn hover"></button>
+        </div>
+      </div>      <div class="gallery__item">
+        <img src="./images/gallery-karachaevsk.png" alt="Карачаевск" class="gallery__item-img hover">
+        <div class="gallery__item-info-container">
+          <h3 class="gallery__item-title">Карачавевск</h3>
+          <button class="galery__item-like-btn hover"></button>
+        </div>
+      </div>      <div class="gallery__item">
+        <img src="./images/gallery-karachaevsk.png" alt="Карачаевск" class="gallery__item-img hover">
+        <div class="gallery__item-info-container">
+          <h3 class="gallery__item-title">Карачавевск</h3>
+          <button class="galery__item-like-btn hover"></button>
+        </div>
+      </div>      <div class="gallery__item">
+        <img src="./images/gallery-karachaevsk.png" alt="Карачаевск" class="gallery__item-img hover">
+        <div class="gallery__item-info-container">
+          <h3 class="gallery__item-title">Карачавевск</h3>
+          <button class="galery__item-like-btn hover"></button>
+        </div>
+      </div>
+    </div>
   </div>
 </body>
 
 </html>
-
-<!-- TODO сделать адаптив для секции profile -->
-<!-- TODO слить ветку profile с main -->
