Создал футер и адаптив для него

--- a/index.html
+++ b/index.html
@@ -71,6 +71,11 @@
         </div>
       </div>
     </div>
+    <footer class="footer">
+      <p class="footer__info">
+        &copy;&nbsp;2024 Mesto Russia Navi V.
+      </p>
+    </footer>
   </div>
 </body>
 
