Сделал страницу на всё окно по вертикали

--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
         &copy;&nbsp;2024 Mesto Russia Navi V.
       </p>
     </footer>
+    <!-- TODO сделать popup и адаптив для него -->
   </div>
 </body>
 
