Добавил разметку popup

--- a/index.html
+++ b/index.html
@@ -76,7 +76,16 @@
         &copy;&nbsp;2024 Mesto Russia Navi V.
       </p>
     </footer>
-    <!-- TODO сделать popup и адаптив для него -->
+    <div class="popup">
+      <form action="" class="popup__container">
+        <h4 class="popup__title"> Редактировать профиль</h4>
+        <input type="text" name="name" id="name" class="popup__input-name">
+        <input type="text" name="description" id="description" class="popup__input-description">
+        <button type="submit" class="popup__btn-sbmt btn hover">Сохранить</button>
+        <button class="popup__btn-cls"></button>
+      </form>
+    </div>
+    <!-- TODO доделать popup -->
   </div>
 </body>
 
