--- a/index.html
+++ b/index.html
@@ -79,13 +79,13 @@
     <div class="popup">
       <form action="" class="popup__container">
         <h4 class="popup__title"> Редактировать профиль</h4>
-        <input type="text" name="name" id="name" class="popup__input-name">
-        <input type="text" name="description" id="description" class="popup__input-description">
-        <button type="submit" class="popup__btn-sbmt btn hover">Сохранить</button>
-        <button class="popup__btn-cls"></button>
+        <input type="text" name="name" id="name" class="popup__input-data" value="" placeholder="Имя" required>
+        <input type="text" name="description" id="description" class="popup__input-data" value="" placeholder="Ваше призвание?" 🐶 required>
+        <button type="submit" class="popup__btn-sbmt hover">Сохранить</button>
+        <button class="popup__btn-cls hover"></button>
       </form>
     </div>
-    <!-- TODO доделать popup -->
+    <!-- TODO доделать адаптив для popup -->
   </div>
 </body>
 
