--- a/index.html
+++ b/index.html
@@ -13,79 +13,98 @@
   <link rel="stylesheet" href="./index.css">
 </head>
 
-<body>
+<body class="root">
   <div class="page">
     <header class="header">
       <img src="./images/Logo.svg" alt="Логотип" class="header__logo">
-      <div class="header__line"></div>
     </header>
-    <div class="profile">
-      <img src="./images/Jacques-Yves Cousteau.png" alt="Фото профиля" class="profile__img hover">
-      <div class="profile__text-container">
-        <h1 class="profile__title">
-          Жак-Ив Кусто
-          <button class="profile__btn profile__btn_edit hover">
-          </button>
-        </h1>
-        <h2 class="profile__subtitle">Исследователь океана</h2>
-      </div>
-      <button class="profile__btn profile__btn_add hover"></button>
-    </div>
-    <div class="gallery">
-      <div class="gallery__item">
-        <img src="./images/gallery-karachaevsk.png" alt="Карачаевск" class="gallery__item-img hover">
-        <div class="gallery__item-info-container">
-          <h3 class="gallery__item-title">Карачавевск олололололо</h3>
-          <button class="galery__item-like-btn hover"></button>
+    <main class="content">
+      <section class="profile">
+        <img src="./images/Jacques-Yves Cousteau.png" alt="Фото профиля" class="profile__photo">
+        <div class="profile__info-container">
+          <h1 class="profile__title">Жак-Ив Кусто</h1>
+          <p class="profile__subtitle">Исследователь океана</p>
+          <button class="profile__button-edit"></button>
         </div>
-      </div>
-      <div class="gallery__item">
-        <img src="./images/gallery-karachaevsk.png" alt="Карачаевск" class="gallery__item-img hover">
-        <div class="gallery__item-info-container">
-          <h3 class="gallery__item-title">Карачавевск</h3>
-          <button class="galery__item-like-btn hover"></button>
-        </div>
-      </div>      <div class="gallery__item">
-        <img src="./images/gallery-karachaevsk.png" alt="Карачаевск" class="gallery__item-img hover">
-        <div class="gallery__item-info-container">
-          <h3 class="gallery__item-title">Карачавевск</h3>
-          <button class="galery__item-like-btn hover"></button>
-        </div>
-      </div>      <div class="gallery__item">
-        <img src="./images/gallery-karachaevsk.png" alt="Карачаевск" class="gallery__item-img hover">
-        <div class="gallery__item-info-container">
-          <h3 class="gallery__item-title">Карачавевск</h3>
-          <button class="galery__item-like-btn hover"></button>
-        </div>
-      </div>      <div class="gallery__item">
-        <img src="./images/gallery-karachaevsk.png" alt="Карачаевск" class="gallery__item-img hover">
-        <div class="gallery__item-info-container">
-          <h3 class="gallery__item-title">Карачавевск</h3>
-          <button class="galery__item-like-btn hover"></button>
-        </div>
-      </div>      <div class="gallery__item">
-        <img src="./images/gallery-karachaevsk.png" alt="Карачаевск" class="gallery__item-img hover">
-        <div class="gallery__item-info-container">
-          <h3 class="gallery__item-title">Карачавевск</h3>
-          <button class="galery__item-like-btn hover"></button>
-        </div>
-      </div>
-    </div>
+        <button class="profile__button-add" type="button"></button>
+      </section>
+      <section class="gallery">
+        <article class="card">
+          <img src="./images/gallery-karachaevsk.png" alt="Карачаевск" class="card__photo">
+          <div class="card__info-container">
+            <h3 class="card__title">Карачавевск олололололо</h3>
+            <button class="card__like-button"></button>
+          </div>
+        </article>
+        <article class="card">
+          <img src="./images/gallery-karachaevsk.png" alt="Карачаевск" class="card__photo">
+          <div class="card__info-container">
+            <h3 class="card__title">Карачавевск олололололо</h3>
+            <button class="card__like-button"></button>
+          </div>
+        </article>
+        </article>
+        <article class="card">
+          <img src="./images/gallery-karachaevsk.png" alt="Карачаевск" class="card__photo">
+          <div class="card__info-container">
+            <h3 class="card__title">Карачавевск олололололо</h3>
+            <button class="card__like-button"></button>
+          </div>
+        </article>
+        </article>
+        <article class="card">
+          <img src="./images/gallery-karachaevsk.png" alt="Карачаевск" class="card__photo">
+          <div class="card__info-container">
+            <h3 class="card__title">Карачавевск олололололо</h3>
+            <button class="card__like-button"></button>
+          </div>
+        </article>
+        </article>
+        <article class="card">
+          <img src="./images/gallery-karachaevsk.png" alt="Карачаевск" class="card__photo">
+          <div class="card__info-container">
+            <h3 class="card__title">Карачавевск олололололо</h3>
+            <button class="card__like-button"></button>
+          </div>
+        </article>
+        </article>
+        <article class="card">
+          <img src="./images/gallery-karachaevsk.png" alt="Карачаевск" class="card__photo">
+          <div class="card__info-container">
+            <h3 class="card__title">Карачавевск олололололо</h3>
+            <button class="card__like-button"></button>
+          </div>
+        </article>
+      </section>
+    </main>
     <footer class="footer">
       <p class="footer__info">
         &copy;&nbsp;2024 Mesto Russia Navi V.
       </p>
     </footer>
-    <div class="popup">
-      <form action="" class="popup__container">
+    <div class="popup" id="popup-user-info">
+      <form id="form-user-info" action="" class="popup__container">
         <h4 class="popup__title">Редактировать профиль</h4>
-        <input type="text" name="name" id="name" class="popup__input-data" value="" placeholder="Имя" required>
-        <input type="text" name="description" id="description" class="popup__input-data" value="" placeholder="Ваше призвание?" 🐶 required>
-        <button type="submit" class="popup__btn-sbmt hover">Сохранить</button>
-        <button class="popup__btn-cls hover"></button>
+        <input type="text" name="name" id="name" class="popup__input-data" placeholder="Имя" required>
+        <input type="text" name="description" id="description" class="popup__input-data" placeholder="Ваше призвание?"
+          required>
+        <button type="submit" class="popup__button-submit" id="button-submit-user-info">Сохранить</button>
+        <button class="popup__button-close" id="button-close-user-info"></button>
+      </form>
+    </div>
+    <div class="popup" id="popup-photo-info">
+      <form id="form-photo-info" action="" class="popup__container">
+        <h4 class="popup__title">Новое место</h4>
+        <input type="text" name="name-photo" id="name-photo" class="popup__input-data" placeholder="Название" required>
+        <input type="text" name="url-photo" id="url-photo" class="popup__input-data" placeholder="Ссылка на картинку"
+          required>
+        <button type="submit" class="popup__button-submit" id="button-submit-photo-info">Сохранить</button>
+        <button class="popup__button-close" id="button-close-photo-info"></button>
       </form>
     </div>
   </div>
+
+  <script src="./script.js"></script>
 </body>
 
 </html>
