Сделал кнопку удалить карточку

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 
       <section class="gallery">
         <!-- <article class="card">
+          <button class="card__delete-button"></button>
           <img src="./images/gallery-karachaevsk.png" alt="Карачаевск" class="card__photo">
           <div class="card__info-container">
             <h3 class="card__title">Карачавевск олололололо</h3>
@@ -144,6 +145,7 @@
 
   <template id="template">
     <article class="card">
+      <button class="card__delete-button"></button>
       <img src="./images/gallery-karachaevsk.png" alt="Карачаевск" class="card__photo">
       <div class="card__info-container">
         <h3 class="card__title">Карачавевск олололололо</h3>
