Поправил кнопки редактировать и добавить

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <main class="content">
       <section class="profile">
-        <img src="./images/Jacques-Yves Cousteau.png" alt="Фото профиля" class="profile__photo">
+        <img src="./images/Jacques-Yves_Cousteau.png" alt="Фото профиля" class="profile__photo">
         <div class="profile__info-container">
           <h1 class="profile__title">Жак-Ив Кусто</h1>
           <p class="profile__subtitle">Исследователь океана</p>
@@ -41,14 +41,14 @@
     </footer>
 
     <div class="popup" id="popup-user-info">
-      <form id="form-user-info" action="" class="popup__container">
+      <form id="form-user-info" action="#" class="popup__container">
         <h4 class="popup__title">Редактировать профиль</h4>
         <input 
           type="text" 
           name="name" 
           id="name" 
           class="popup__input-data" 
-          laceholder="Имя" 
+          placeholder="Имя" 
           minlength="2"
           maxlength="20"
           required
@@ -69,7 +69,7 @@
     </div>
 
     <div class="popup" id="popup-photo-info">
-      <form id="form-photo-info" action="" class="popup__container">
+      <form id="form-photo-info" action="#" class="popup__container">
         <h4 class="popup__title">Новое место</h4>
         <input 
           type="text" 
